overlays/staging-istio/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging-istio
#  labels:
#    istio-injection: enabled
