overlays/staging-istio/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    cert-manager.io/common-name: staging.wolkenschloss.test
spec:
  tls:
    - hosts:
        - staging.wolkenschloss.test
      secretName: gateway-cert
